--- a/resources/assets/sass/components/font.scss
+++ b/resources/assets/sass/components/font.scss
@@ -14,7 +14,7 @@ h1{
     }
 }
 
-nav{
+#Nav {
     font-family: Agency FB;
     font-weight: normal;
     font-size: 2em;
@@ -31,6 +31,7 @@ nav{
         font-family: Agency FB;
         font-weight: normal;
         font-size: 2.5em;
+        margin-top: 1em;
     }
 }
 
