--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -4,6 +4,7 @@
 @import 'components/head';
 @import 'components/main';
 @import 'components/foot';
-@import 'components/imageSlider';
+@import 'components/slick-theme';
+@import 'components/slick';
 @import 'components/breakpoints';
 
