--- a/resources/assets/sass/components/breakpoints.scss
+++ b/resources/assets/sass/components/breakpoints.scss
@@ -1,8 +1,114 @@
 @media only screen and (min-width: 35em) {
     /* Style adjustments for viewports that meet the condition */
-   .heading{
-       background-color: $secondary-back-color;
-   }
+    .heading{
+        background-color: $secondary-back-color;
+        height: 10.5em;
+        z-index: 2000;
+    
+        img{
+            width: 8em;
+            height: 8em;
+        }
+        
+        h1{
+            font-size: 4em;
+        }
+        
+        #Bars {
+            font-size: 3em;
+            margin-top: 0.5em;
+        }
+    }
+    
+    #Nav {
+        margin-top: 5.5em;
+        
+        li{
+            font-size: 1.5em;
+        }
+    }
+    
+    #Home,#Portfolio,#About,#Contact,#Other {
+        h1{
+            font-size: 4em;
+            margin:2em 0 1em 1.5em;
+        }
+    }
+    
+    .img-slider {
+        margin-left:13em;
+        width: 28em;
+        height: 28em;
+//        border: thin darkblue solid;
+    }
+    
+    .image-slider{   
+        display: block;
+        width: 100%;
+        height: 100%;
+    //	position: relative;
+    //    margin-top: 10em;
+        margin: 0 1em 0 0.5em;
+//        border: red solid thin;
+    }
+    
+   .slick-slide{
+        display: none;
+        float: left;
+        margin-left: 0;
+    //    width: 100%;
+        height: 100%;
+        min-height: 1px;
+//        border: black thin solid;
+    }
+    
+    .slick-slider .slick-track,
+    .slick-slider .slick-list
+    {
+        height: 100%;
+        width: 100%;
+        margin-left: 2px;
+//        border: orange solid thin;
+        -webkit-transform: translate3d(0, 0, 0);
+           -moz-transform: translate3d(0, 0, 0);
+            -ms-transform: translate3d(0, 0, 0);
+             -o-transform: translate3d(0, 0, 0);
+                transform: translate3d(0, 0, 0);
+    }
+    
+    .slick-prev,
+    .slick-next {
+        margin-right: -54px;
+        margin-left: -30px;
+    }
+    
+    .work{
+        p{
+            color: black;
+            font-family: Agency FB;
+            font-weight: normal;
+            font-size: 2.5em;
+            margin-bottom: 1em;
+        }
+    }
+    
+    .paper,.logo,.packaging{
+        p{
+            color: black;
+            text-align: center;
+            font-family: Agency FB;
+            font-weight: normal;
+            font-size: 3.5em;
+            margin-top: 1em;
+        }
+        
+        img{
+            width: 20em;
+            height: 20em;
+            margin: 1em 0 1em 2.5em;
+            border: 0.15em black solid;
+        }
+    }  
 }
 
 @media only screen and (min-width: 55em) {
