--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -364,13 +364,14 @@ section {
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
-  margin-left: 2em; }
+  border: orange thin solid; }
 
 .paper, .logo, .packaging {
-  -webkit-flex: 1 0 100%;
-  -ms-flex: 1 0 100%;
-  flex: 1 0 100%;
-  width: 23.5em; }
+  -webkit-flex: 1 0 auto;
+  -ms-flex: 1 0 auto;
+  flex: 1 0 auto;
+  border: thin red solid;
+  width: 18em; }
   .paper img, .logo img, .packaging img {
     width: 10em;
     height: 10em;
@@ -672,10 +673,13 @@ section {
 
 @media only screen and (min-width: 35em) {
   /* Style adjustments for viewports that meet the condition */
+  .container {
+    border: orange thin solid; }
   .heading {
+    position: relative;
     background-color: #6E6E6E;
     height: 10.5em;
-    max-width: 54.88em;
+    width: 100%;
     z-index: 2000; }
     .heading img {
       width: 8em;
@@ -684,16 +688,17 @@ section {
       font-size: 4em; }
     .heading #Bars {
       font-size: 3em;
-      margin-top: 0.5em; }
+      margin-top: 1em; }
   #Nav {
-    margin-top: 5.5em; }
+    margin: auto;
+    margin-top: 1.5em; }
     #Nav li {
       font-size: 1.5em; }
   #Home h1, #Portfolio h1, #About h1, #Contact h1, #Other h1 {
     font-size: 4em;
-    margin: 2em 0 1em 1.5em; }
+    margin: auto; }
   .img-slider {
-    margin-left: 13em;
+    margin: auto;
     width: 28em;
     height: 28em; }
   .image-slider {
@@ -711,9 +716,7 @@ section {
   .slick-slider .slick-list {
     height: 100%;
     width: 100%;
-    margin-left: 2px;
-    -webkit-transform: translate3d(0, 0, 0);
-    transform: translate3d(0, 0, 0); }
+    margin-left: 2px; }
   .slick-prev,
   .slick-next {
     margin-right: -60px;
@@ -741,55 +744,182 @@ section {
     font-weight: normal;
     font-size: 2.5em;
     margin-bottom: 1em; }
-  .paper p, .logo p, .packaging p {
+  .paper, .logo, .packaging {
+    width: 25em;
+    margin: auto; }
+    .paper p, .logo p, .packaging p {
+      color: black;
+      text-align: center;
+      font-family: Agency FB;
+      font-weight: normal;
+      font-size: 3.5em;
+      margin-top: 1em; }
+    .paper img, .logo img, .packaging img {
+      width: 20em;
+      height: 20em;
+      margin: 1em 0 1em 2.5em;
+      border: 0.15em black solid; }
+  #About p {
+    font-size: 1.8em;
+    width: 20em;
+    margin: auto;
+    text-align: justify; }
+  .form #Form {
+    width: 34em;
+    font-size: 1.35em;
+    margin: auto; }
+    .form #Form label {
+      width: 8em;
+      margin-left: 1em;
+      margin-top: 2em;
+      text-align: center;
+      display: inline-block; }
+    .form #Form input {
+      width: 21.5em;
+      max-width: 22em;
+      margin-top: 1.5em;
+      margin-left: 0.3em;
+      display: inline-block; }
+    .form #Form #Email {
+      margin-left: 2.75em; }
+    .form #Form #Subject {
+      margin-left: 2.5em; }
+    .form #Form #Message {
+      width: 21.5em;
+      max-width: 22em;
+      margin-top: 2em;
+      margin-left: 0.3em; }
+    .form #Form #Send {
+      height: 2em;
+      width: 50%;
+      margin-top: 1em;
+      margin-bottom: 1em;
+      margin-left: 7em;
+      font-size: 1.8em;
+      text-align: center;
+      border-radius: 1em; }
+  footer p {
+    font-size: 1.5em; } }
+
+/*==========================================================================================*/
+/*                             Second Breakpoint                                            */
+/*==========================================================================================*/
+@media only screen and (min-width: 55em) {
+  .heading {
+    background-color: #6E6E6E;
+    height: 10.5em;
+    max-width: 54.88em;
+    z-index: 2000; }
+    .heading img {
+      width: 8em;
+      height: 8em; }
+    .heading h1 {
+      font-size: 4em; }
+    .heading #Bars {
+      font-size: 3em;
+      margin-top: 1em; }
+  #Nav {
+    margin-top: 5.5em; }
+    #Nav li {
+      font-size: 1.5em; }
+  #Home h1, #Portfolio h1, #About h1, #Contact h1, #Other h1 {
+    font-size: 4em;
+    margin: 2em 0 1em 1.5em; }
+  .img-slider {
+    margin-left: 13em;
+    width: 28em;
+    height: 28em; }
+  .image-slider {
+    display: block;
+    width: 100%;
+    height: 100%;
+    margin: 0 1em 0 0.5em; }
+  .slick-slide {
+    display: none;
+    float: left;
+    margin-left: 0;
+    height: 100%;
+    min-height: 1px; }
+  .slick-slider .slick-track,
+  .slick-slider .slick-list {
+    height: 100%;
+    width: 100%;
+    margin-left: 2px; }
+  .slick-prev,
+  .slick-next {
+    margin-right: -60px;
+    margin-left: -50px; }
+  .slick-prev:before,
+  .slick-next:before {
+    font-size: 40px;
+    line-height: 0; }
+  .info {
+    height: 40em; }
+    .info p {
+      font-size: 1.8em;
+      width: 22em;
+      margin-left: 3em; }
+    .info img {
+      width: 25em;
+      height: 25em;
+      margin: 1.5em 0 1.5em 13em; }
+    .info .cls {
+      width: 5em;
+      margin: 2em 0 0 24em; }
+  .work p {
     color: black;
-    text-align: center;
     font-family: Agency FB;
     font-weight: normal;
-    font-size: 3.5em;
-    margin-top: 1em; }
-  .paper img, .logo img, .packaging img {
-    width: 20em;
-    height: 20em;
-    margin: 1em 0 1em 2.5em;
-    border: 0.15em black solid; }
+    font-size: 2.5em;
+    margin-bottom: 1em; }
+  .paper, .logo, .packaging {
+    border: white thick dotted; }
+    .paper p, .logo p, .packaging p {
+      color: black;
+      text-align: center;
+      font-family: Agency FB;
+      font-weight: normal;
+      font-size: 3.5em;
+      margin-top: 1em; }
+    .paper img, .logo img, .packaging img {
+      width: 20em;
+      height: 20em;
+      margin: 1em 0 1em 2.5em;
+      border: 0.15em black solid; }
   #About p {
     font-size: 1.8em;
     width: 25em;
     margin: auto; }
-  .form {
-    border: thin red solid; }
-    .form #Form {
-      border: thin green solid;
-      width: 35em;
-      margin: auto; }
-      .form #Form label {
-        border: thin blue solid;
-        width: 8em;
-        margin-left: 2em;
-        margin-top: 2em;
-        text-align: center;
-        display: inline-block; }
-      .form #Form input {
-        width: 22em;
-        margin-top: 1.5em;
-        margin-left: 1.2em;
-        display: inline-block; }
-      .form #Form #Email {
-        margin-left: 2.75em; }
-      .form #Form #Subject {
-        margin-left: 2.5em; }
-      .form #Form #Message {
-        width: 22em;
-        margin-top: 2em;
-        margin-left: 1.2em; }
-      .form #Form #Send {
-        height: 3em;
-        width: 100%;
-        margin-top: 2em;
-        background-color: #9E9E9E;
-        border: none; } }
+  .form #Form {
+    width: 35em;
+    margin: auto; }
+    .form #Form label {
+      width: 8em;
+      margin-left: 2em;
+      margin-top: 2em;
+      text-align: center;
+      display: inline-block; }
+    .form #Form input {
+      width: 22em;
+      margin-top: 1.5em;
+      margin-left: 1.2em;
+      display: inline-block; }
+    .form #Form #Email {
+      margin-left: 2.75em; }
+    .form #Form #Subject {
+      margin-left: 2.5em; }
+    .form #Form #Message {
+      width: 22em;
+      margin-top: 2em;
+      margin-left: 1.2em; }
+    .form #Form #Send {
+      height: 3em;
+      width: 100%;
+      margin-top: 2em;
+      font-size: 1.8em;
+      text-align: center; } }
 
+/*==========================================================================================*/
 @media only screen and (min-width: 75em) {
   .heading {
     margin: 0 0 1em 0;
