--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -265,7 +265,7 @@ footer p {
 
 #Form {
   color: black;
-  font-size: 1.2em; }
+  font-size: 1em; }
 
 .heading {
   background-color: #6E6E6E;
@@ -315,6 +315,8 @@ footer p {
       text-align: center; }
   #Nav.show {
     display: block; }
+  #Nav.hide {
+    display: none; }
 
 .linkUnderline {
   text-decoration: underline; }
@@ -335,8 +337,8 @@ body {
   width: 100%; }
 
 .img-slider {
-  margin-left: 0.8em;
-  width: 24em; }
+  margin-left: 2.5em;
+  width: 20.5em; }
 
 section {
   padding-top: 5em;
@@ -348,7 +350,7 @@ section {
   flex: 1 1 100%;
   width: 18.5em;
   height: 15em;
-  margin: 0 1em 0 0.5em; }
+  margin: 0 1em 0 -0.7em; }
 
 .work {
   display: -webkit-flex;
@@ -363,20 +365,18 @@ section {
 .display {
   display: -webkit-flex;
   display: -ms-flexbox;
-  display: flex;
-  border: orange thin solid; }
+  display: flex; }
 
 .paper, .logo, .packaging {
   -webkit-flex: 1 0 auto;
   -ms-flex: 1 0 auto;
   flex: 1 0 auto;
-  border: thin red solid;
   width: 18em; }
   .paper img, .logo img, .packaging img {
-    width: 10em;
-    height: 10em;
-    margin-left: 1em;
-    margin-bottom: 1em;
+    width: 8.5em;
+    height: 8.5em;
+    margin-left: 2.8em;
+    margin-bottom: 3em;
     border: 0.15em black solid; }
 
 .dim {
@@ -404,30 +404,34 @@ section {
 .pic1, .pic2, .pic3, #Paperart, #Logo, #Pack, .cls {
   cursor: pointer; }
 
+#About p {
+  width: 19em;
+  margin: auto; }
+
 .form #Form {
-  width: 23em;
+  width: 20.5em;
   margin: auto; }
   .form #Form label {
     width: 4.8em;
     display: inline-block; }
   .form #Form input {
-    width: 17em;
+    width: 15em;
     height: 2em;
-    margin-top: -2.5em;
-    margin-left: 5.2em;
+    margin-top: -2em;
+    margin-left: 5em;
     display: inline-block; }
   .form #Form #Email {
     margin-left: 2.75em; }
   .form #Form #Subject {
     margin-left: 2.5em; }
   .form #Form #Message {
-    margin-top: -2em;
-    width: 17em;
-    margin-left: 5.2em; }
+    margin-top: -1.2em;
+    width: 15em;
+    margin-left: 5em; }
   .form #Form #Send {
     height: 3em;
-    width: 100%;
-    margin: 1em 0 0 -0.7em;
+    width: 10em;
+    margin: 1em 0 1em 6em;
     background-color: #9E9E9E;
     border: none; }
 
@@ -525,7 +529,7 @@ section {
 .slick-dots {
   position: absolute;
   bottom: -45px;
-  left: 20px;
+  left: 15px;
   display: block;
   width: 100%;
   padding: 0;
