--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -203,6 +203,9 @@ li {
   h3 {
     page-break-after: avoid; } }
 
+/*=======================================================*/
+/*                    Font                               */
+/*=======================================================*/
 h1 {
   color: black;
   text-align: center;
@@ -246,7 +249,7 @@ h1 {
   color: black;
   font-family: Agency FB;
   font-weight: normal;
-  font-size: 1.2em;
+  font-size: 1.15em;
   text-align: left; }
 
 .info p {
@@ -267,6 +270,7 @@ footer p {
   color: black;
   font-size: 1em; }
 
+/*=======================================================*/
 .heading {
   background-color: #6E6E6E;
   margin: 0;
@@ -330,14 +334,13 @@ footer p {
 body {
   margin: 0;
   padding: 0;
-  background-color: #9E9E9E;
-  width: 100%; }
+  background-color: #9E9E9E; }
 
 .container {
   width: 100%; }
 
 .img-slider {
-  margin-left: 2.5em;
+  margin-left: 3.5em;
   width: 20.5em; }
 
 section {
@@ -375,7 +378,7 @@ section {
   .paper img, .logo img, .packaging img {
     width: 8.5em;
     height: 8.5em;
-    margin-left: 2.8em;
+    margin-left: 3.5em;
     margin-bottom: 3em;
     border: 0.15em black solid; }
 
@@ -384,17 +387,20 @@ section {
 
 .info {
   opacity: 1;
-  height: 32em;
+  height: auto;
+  width: 95%;
+  margin: auto;
   background-color: #9E9E9E; }
   .info p {
     width: 15em;
-    margin-left: 3em; }
+    margin-left: 3.5em; }
   .info img {
     width: 20em;
     height: 20em;
-    margin: 1.5em 3em 1.5em 3em;
+    margin: 1.5em 3.5em 1.5em 3.5em;
     border: none; }
   .info .cls {
+    position: relative;
     width: 5em;
     margin: 1em 0 0 15em; }
 
@@ -405,7 +411,7 @@ section {
   cursor: pointer; }
 
 #About p {
-  width: 19em;
+  width: 19.5em;
   margin: auto; }
 
 .form #Form {
@@ -678,13 +684,15 @@ section {
 @media only screen and (min-width: 35em) {
   /* Style adjustments for viewports that meet the condition */
   .container {
+    width: 100%;
+    overflow: hidden;
     border: orange thin solid; }
   .heading {
-    position: relative;
+    position: fixed;
     background-color: #6E6E6E;
     height: 10.5em;
     width: 100%;
-    z-index: 2000; }
+    z-index: 1000; }
     .heading img {
       width: 8em;
       height: 8em; }
@@ -693,9 +701,11 @@ section {
     .heading #Bars {
       font-size: 3em;
       margin-top: 1em; }
+  section {
+    padding-top: 11em; }
   #Nav {
     margin: auto;
-    margin-top: 1.5em; }
+    margin-top: 5.5em; }
     #Nav li {
       font-size: 1.5em; }
   #Home h1, #Portfolio h1, #About h1, #Contact h1, #Other h1 {
@@ -729,19 +739,17 @@ section {
   .slick-next:before {
     font-size: 40px;
     line-height: 0; }
-  .info {
-    height: 40em; }
-    .info p {
-      font-size: 1.8em;
-      width: 22em;
-      margin-left: 3em; }
-    .info img {
-      width: 25em;
-      height: 25em;
-      margin: 1.5em 0 1.5em 13em; }
-    .info .cls {
-      width: 5em;
-      margin: 2em 0 0 24em; }
+  .info p {
+    font-size: 1.8em;
+    width: 22em;
+    margin-left: 3em; }
+  .info img {
+    width: 25em;
+    height: 25em;
+    margin: 1.5em 8.5em 1.5em 8.5em; }
+  .info .cls {
+    width: 5em;
+    margin: 2em 0 0 24em; }
   .work p {
     color: black;
     font-family: Agency FB;
@@ -750,7 +758,7 @@ section {
     margin-bottom: 1em; }
   .paper, .logo, .packaging {
     width: 25em;
-    margin: auto; }
+    margin-left: 2em; }
     .paper p, .logo p, .packaging p {
       color: black;
       text-align: center;
@@ -769,21 +777,19 @@ section {
     margin: auto;
     text-align: justify; }
   .form #Form {
-    width: 34em;
+    width: 32em;
     font-size: 1.35em;
     margin: auto; }
     .form #Form label {
       width: 8em;
-      margin-left: 1em;
+      margin-left: -0.5em;
       margin-top: 2em;
-      text-align: center;
-      display: inline-block; }
+      text-align: center; }
     .form #Form input {
       width: 21.5em;
       max-width: 22em;
       margin-top: 1.5em;
-      margin-left: 0.3em;
-      display: inline-block; }
+      margin-left: 0.3em; }
     .form #Form #Email {
       margin-left: 2.75em; }
     .form #Form #Subject {
@@ -798,7 +804,7 @@ section {
       width: 50%;
       margin-top: 1em;
       margin-bottom: 1em;
-      margin-left: 7em;
+      margin-left: 5em;
       font-size: 1.8em;
       text-align: center;
       border-radius: 1em; }
@@ -811,17 +817,15 @@ section {
 @media only screen and (min-width: 55em) {
   .heading {
     background-color: #6E6E6E;
-    height: 10.5em;
-    max-width: 54.88em;
-    z-index: 2000; }
+    height: 10.5em; }
     .heading img {
       width: 8em;
       height: 8em; }
     .heading h1 {
-      font-size: 4em; }
+      font-size: 5.5em; }
     .heading #Bars {
-      font-size: 3em;
-      margin-top: 1em; }
+      font-size: 4em;
+      margin-top: 0.68em; }
   #Nav {
     margin-top: 5.5em; }
     #Nav li {
