--- a/resources/assets/sass/components/main.scss
+++ b/resources/assets/sass/components/main.scss
@@ -10,7 +10,7 @@ body{
     margin: 0;
     padding: 0;
     background-color: $primary-back-color;
-    width: 100%;
+//    width: 100%;
 //    border: thin blue solid;
 //    max-width: 100vw;
 //    overflow-x:hidden;
@@ -22,7 +22,7 @@ body{
 }
 
 .img-slider {
-    margin-left: 2.5em;
+    margin-left: 3.5em;
     width: 20.5em;
 //    border: thin darkblue solid;
 }
@@ -66,7 +66,7 @@ section{
     img{
         width: 8.5em;
         height: 8.5em;
-        margin-left: 2.8em;
+        margin-left: 3.5em;
         margin-bottom: 3em;
         border: 0.15em black solid;
     }
@@ -79,20 +79,23 @@ section{
 .info{
     opacity: 1;
 //    border: thin black solid;
-    height: 32em;
+    height: auto;
+    width: 95%;
+    margin: auto;
     background-color: $primary-back-color;
     p{
         width: 15em;
-        margin-left: 3em;
+        margin-left: 3.5em;
     }
     img{
         width: 20em;
         height: 20em;
-        margin: 1.5em 3em 1.5em 3em;
+        margin: 1.5em 3.5em 1.5em 3.5em;
 //        margin-top: 1.5em;
         border: none;
     }
     .cls{
+        position: relative;
         width: 5em;
         margin: 1em 0 0 15em;
     }
@@ -108,7 +111,7 @@ section{
 
 #About{
     p{
-        width: 19em;
+        width: 19.5em;
         margin: auto;
     }
 }
